fix transition z-index

--- a/src/app/layout/components/top-app-bar/top-app-bar.component.scss
+++ b/src/app/layout/components/top-app-bar/top-app-bar.component.scss
@@ -6,6 +6,7 @@
   contain: paint;
   top: 0;
   transition: box-shadow 200ms cubic-bezier(0.2, 0, 0, 1);
+  view-transition-name: top-app-bar;
 }
 
 app-breadcrumb {
@@ -25,7 +26,7 @@ app-breadcrumb {
 }
 
 .mat-toolbar-row:first-child {
-  view-transition-name: top-app-bar;
+  view-transition-name: top-app-bar-toolbar;
 }
 
 :host-context(.with-bars) {
