--- a/src/styles/main/transition.scss
+++ b/src/styles/main/transition.scss
@@ -138,7 +138,7 @@
   z-index: 3;
 }
 
-::view-transition-group(top-app-bar) {
+::view-transition-group(top-app-bar-toolbar) {
   z-index: 2;
 }
 
